@@ -13,6 +13,7 @@ Version 4.0.1 (2013-xx-xx)
 	Fixed bug where browser spellchecking was enabled while editing inline on IE 10.
 	Fixed bug where spellchecker wouldn't properly find non English words.
 	Fixed bug where deactivating inline editor instances would force padding-top: 0 on page body.
+	Fixed bug where jQuery would initialize editors multiple times since it didn't check if the editor already existed.
 	Fixed so the icon parameter for addButton isn't automatically filled if a button text is provided.
 	Fixed so image size fields gets updated when selecting a new image in the image dialog.
 	Fixed so it doesn't load any language pack if the language option is set to "en".
